--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="error_login_not_found">You need to signup with your ID first.</string>
     <string name="error_login_conflict">Your password is incorrect.</string>
     <string name="error_service_unavailable">Something went wrong, please try again.</string>
+    <string name="signing_up">signing up</string>
 </resources>
