--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
     <string name="logout">Logout</string>
+    <string name="query_logout">Are you sure you want to logout?</string>
+    <string name="back">Back</string>
+    <string name="logging_out">logging out</string>
 </resources>
