updated smartplug api

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -33,4 +33,36 @@
     <string name="query_logout">Are you sure you want to logout?</string>
     <string name="back">Back</string>
     <string name="logging_out">logging out</string>
+    <string name="smart_plugs">Smart Plugs</string>
+    <string name="off">off</string>
+    <string name="on">on</string>
+    <string name="control">Control</string>
+    <string name="automation">Automation</string>
+    <string name="smart_plug">Smart Plug</string>
+    <string name="add_a_smart_plug">TINA3 Smart Plug</string>
+    <string name="add_a_smart_plug_info_1">To add one, make sure it\'s connected to your power outlet and you also have its unique ID</string>
+    <string name="smart_plug_id">Smart-Plug ID</string>
+    <string name="add_smart_plug_try_info">Try switching on your Smart-plug by clicking the switch here,</string>
+    <string name="name">Name</string>
+    <string name="id">ID</string>
+    <string name="automated">Automated</string>
+    <string name="error_empty_id">Smart-plug ID?</string>
+    <string name="error_invalid_smartplug_id">Your Smart-plug id should be 22 characters long.</string>
+    <string name="adding_smart_plug">adding smart-plug</string>
+    <string name="smart_plug_id_info">(your Smart-plug ID is a 22 character string which comes with your smart-plug)</string>
+    <string name="smart_plug_optional_name">Name (optional)</string>
+    <string name="smart_plug_name_info">(adding an optional name lets you remember what this plug is meant for. \ne.g - Kettle )</string>
+    <string name="error_smartplug_conflict">This Smart-plug already belongs to someone else.</string>
+    <string name="error_smartplug_not_found">Your Smart-plug didn\'t respond. Please make sure it\'s connected, then try again.</string>
+    <string name="smart_plug_created_now_name">Your Smart-plug has been added to your account successfully.</string>
+    <string name="naming_smart_plug">naming your smart plug</string>
+    <string name="error_smartplug_rename_not_found">This Smart-plug isn\'t yours.</string>
+    <string name="smart_plug_add_learn_switch_on">Try switching on your Smart-plug by clicking on the switch above.</string>
+    <string name="smart_plug_add_learn_switch_off">Click again to switch it off</string>
+    <string name="smart_plug_add_learn_switch_settings">Click on the gear icon to change this Smart-plugs settings.</string>
+    <string name="smart_plug_add_learn_switch_automation">Your plug can automate switching on/off if you enable automation.</string>
+    <string name="smart_plug_add_learn_switch_learned">You\'re good to go.</string>
+    <string name="smart_plug_error_switch_off">Your Smart-plug couldn\'t be switched off. Please try again</string>
+    <string name="smart_plug_error_switch_on">Your Smart-plug couldn\'t be switched on. Please try again.</string>
+    <string name="no_events">No Events for today.</string>
 </resources>
