--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="hint_no_smart_plugs_added">No Smart-plugs added</string>
     <string name="hint_no_smart_plugs_added_info">when you add some, you\'ll always find them here.</string>
     <string name="okay">Okay</string>
+    <string name="error_no_accounts">No valid accounts found on your device. Please logout and login again.</string>
 </resources>
